--- a/ratings/templates/user_ratings_evaluation.html
+++ b/ratings/templates/user_ratings_evaluation.html
@@ -8,10 +8,10 @@
     <div class="col-lg-12 mb-4">
         <div class="card z-index-2">
             <div class="card-header pb-0">
-                <h6>{{ userName }}s ratings</h6>
+                <h6>Chart Ratings</h6>
                 <p class="text-sm">
                     <i class="fa fa-star text-success"></i>
-                    <span class="font-weight-bold">How are {{ userName }}s shifts going?</span>
+                    <span>How are <b style="color: #82d616;">{{ userName }}</b> shifts going?</span>
                 </p>
             </div>
             <div class="card-body p-3">
